New update to the VIIRS point generation code

--- a/generate_VIIRS_points.ipynb
+++ b/generate_VIIRS_points.ipynb
@@ -284,10 +284,15 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "* Now we will generate VIIRS points"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
