--- a/generate_VIIRS_points.ipynb
+++ b/generate_VIIRS_points.ipynb
@@ -7,7 +7,8 @@
     "# Generate VIIRS points\n",
     "\n",
     "**Name:** Asaf Vanunu  \n",
-    "**Date:** July 31, 2024\n",
+    "**Date:** July 31, 2024  \n",
+    "**step:** 1\n",
     "\n",
     "## Description\n",
     "This script takes VIIRS fire product and geolocation files and create VIIRS shapefile points\n"
@@ -22,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +276,7 @@
        "4  F:\\VIIRS_data\\VIIRS_GEO\\VNP03IMG.A2022182.1854...  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
