--- a/generate_VIIRS_points.ipynb
+++ b/generate_VIIRS_points.ipynb
@@ -30,6 +30,7 @@
     "import GOES_VIIRS_tools\n",
     "import os\n",
     "import pandas as pd\n",
+    "import xarray as xr\n",
     "import numpy as np\n",
     "import geopandas as gpd\n",
     "import matplotlib.pyplot as plt"
